--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <section class="nav-left">
-                <img src="/images/Frame.png" alt="">
+                <img src="./images/Frame.png" alt="">
                 <h1><span>G</span>amer</h1>
             </section>
             <section class="nav-right">
@@ -22,8 +22,8 @@
                 </ul>
                 <button class="nav-btn">
                     <p>Follow Us On</p>
-                    <img src="/images/Vector.svg" alt="">
-                    <img src="/images/tik-tok 1.svg" alt="">
+                    <img src="./images/Vector.svg" alt="">
+                    <img src="./images/tik-tok 1.svg" alt="">
                 </button>
             </section>
         </nav>
