--- a/index.html
+++ b/index.html
@@ -31,7 +31,22 @@
 <!-- header section end -->
     <main>
         <!-- goat section start -->
-        
+        <div class="goat">
+            <section class="goat-left">
+                <h3>Play Like The</h3>
+                <h1>G.O.A.T.</h1>
+                <p><img src="./images/play.svg" alt=""> 1-Click instant play</p>
+                <p><img src="./images/download.svg" alt=""> No Download</p>
+                <p><img src="./images/support.svg" alt=""> 1000s of supported online games</p>
+                <div class="goat-btn">
+                    <button class="goat-btn-left">SIGN IN</button>
+                    <button class="goat-btn-right">GO ROGUE</button>
+                </div>
+            </section>
+            <section class="goat-right">
+                <img src="./images/Group 18.png" alt="">
+            </section>
+        </div>
         <!-- goat section end -->
     </main>
     <footer>
