gamer section responsive

--- a/index.html
+++ b/index.html
@@ -48,6 +48,23 @@
             </section>
         </div>
         <!-- goat section end -->
+        <!-- gamer section start -->
+        <div class="gamer">
+            <section class="gamer-left">
+                <img src="./images/pngwing 4.png" alt="">
+            </section>
+            <section class="gamer-right">
+                <h3>We are gamer</h3>
+                <p class="gamer-p">
+                    An international digital games and entertainment <br> company. We develop, publish and distribute multiplayer <br> mobile games. We reach over 400 million players each <br> month and our audience keeps growing.
+                </p>
+                <button class="gamer-btn">Know More</button>
+                <p class="gamer-right-footer">Our purpose... <br>
+                    <span>“unleash the gamer in everyone”</span>
+                </p>
+            </section>
+        </div>
+        <!-- gamer section end -->
     </main>
     <footer>
 
