--- a/index.html
+++ b/index.html
@@ -65,6 +65,31 @@
             </section>
         </div>
         <!-- gamer section end -->
+
+        <!-- online game section start -->
+        <div class="online-game">
+            <h1>Online Games <span>Funny Videos</span></h1>
+            <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div class="online-game-items">
+                <div class="item">
+                    <img src="./images/Rectangle 4.png" alt="">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="item">
+                    <img src="./images/Rectangle 5.png" alt="">
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                <div class="item">
+                    <img src="./images/Rectangle 6.png" alt="">
+                    <p>Breaking game records like OG</p>
+                </div>
+                <div class="item">
+                    <img src="./images/Rectangle 7.png" alt="">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+            </div>
+        </div>
+        <!-- online game section end -->
     </main>
     <footer>
 
