--- a/index.html
+++ b/index.html
@@ -90,6 +90,24 @@
             </div>
         </div>
         <!-- online game section end -->
+        <!-- play Instantly section start -->
+        <div class="play-instantly">
+            <section class="instantly-left">
+                <h1>
+                    <span>Play Instantly,</span><br>
+                    No Downloads <br>
+                    No Installs.
+                </h1>
+                <p>
+                    Play games online for free without<br> downloading. Just click the Play button<br> and play instantly in your browser.
+                </p>
+            </section>
+            <section class="instantl-right">
+                <img src="./images/Rectangle 55.png" alt="">
+                <img src="./images/Rectangle 66.png" alt="" class="instantly-img">
+            </section>
+        </div>
+        <!-- play Instantly section end -->
     </main>
     <footer>
 
