--- a/index.html
+++ b/index.html
@@ -108,9 +108,118 @@
             </section>
         </div>
         <!-- play Instantly section end -->
+        <!-- careers section start -->
+        <div class="careers">
+            <section class="careers-content">
+                <h3>Careers</h3>
+                <p>
+                    Gamer is driven to create the best and most fun games for our millions of players all around the world, and we,re always on the lookout for more top talent to join our growing team. If you,d like to help us make great games and be a part of Gamers bright future, we,d love to hear from you.
+                </p>
+                <div class="careers-li">
+                    <div class="careers-li-left">
+                        <p>
+                            Multimedia Artist + <br>
+                            Data Engineer + <br>
+                            Adroid Engineer +<br>
+                            Server Developer + <br>
+                            Group Financial Accountant + <br>
+                            Senior User Acuisition Specialist +
+                        </p>
+                    </div>
+                    <div class="careers-li-right">
+                        <p>
+                            Lisbon, Portugal <br>
+                            Lisbon, Portugal <br>
+                            Zoetermeer, Netherlands <br>
+                            Lisbon, Portugal <br>
+                            London, United Kingdom <br>
+                            Lisbon, Portugal 
+                        </p>
+                    </div>
+                    
+                </div>
+                <button class="careers-btn">See all positions</button>
+            </section>
+            <section class="careers-img">
+                <img src="./images/Group 65.png" alt="">
+            </section>
+        </div>
+        <!-- careers section end -->
+        <!-- all-game-section start -->
+        <div class="all-game-section">
+            <button>
+                <img src="./images/Rectangle 11.png" alt="">
+                Action Games
+            </button>
+            <button>
+                <img src="./images/Rectangle 12.png" alt="">
+                Adventure Games
+            </button>
+            <button>
+                <img src="./images/Rectangle 13.png" alt="">
+                Arcade Games
+            </button>
+            <button>
+                <img src="./images/Rectangle 14.png" alt="">
+                Educational Games
+            </button>
+            <button>
+                <img src="./images/Rectangle 15.png" alt="">
+                Word Games
+            </button>
+            <button>
+                <img src="./images/Rectangle 16.png" alt="">
+                Role Palying Games
+            </button>
+            <button>
+                <img src="./images/Rectangle 17.png" alt="">
+                Music & Audio Games
+            </button>
+            <button>
+                <img src="./images/Rectangle 18.png" alt="">
+                Puzzle Games
+            </button>
+            <button>
+                <img src="./images/Rectangle 19.png" alt="">
+                Strategy Games
+            </button>
+        </div>
+        <!-- all-game-section end -->
     </main>
     <footer>
-
+        <div class="footer-header">
+                <img src="./images/Frame.png" alt="">
+                <h1><span>G</span>amer</h1>
+        </div>
+        <div class="footer-li">
+            <ul>
+                <li>Our Story</li>
+                <li>Games</li>
+                <li>Web Games</li>
+                <li>Careers</li>
+                <li>Support</li>
+                <li>My Account</li>
+            </ul>
+        </div>
+        <div class="footer-logo">
+            <img src="./images/twitter 1.svg" alt="">
+            <img src="./images/facebook 1.svg" alt="">
+            <img src="./images/Youtube.svg" alt="">
+            <img src="./images/linkedin 1.svg" alt="">
+            <img src="./images/instagram 1.svg" alt="">
+            <img src="./images/apple 1.svg" alt="">
+        </div>
+        <div class="privacy">
+            <ul>
+                <li>Terms and Conditions</li>
+                <li>Privacy Policy</li>
+                <li>Cookie Policy</li>
+                <li>Privacy Settings</li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
     </footer>
 </body>
 </html>
